# git-config-parser

./: .envrc  .gitignore  pyproject.toml
git_configfmt/: cli.py  formatter.py  nodes.py
